--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "PeterWin",
   "license": "",
   "scripts": {
+    "audit:fix": "yarn-audit-fix",
     "buildLib": "webpack --mode=production",
     "buildDev": "tsc --declaration",
     "test": "jest",
@@ -20,7 +21,9 @@
     "lint:fix": "eslint ./src --ext .ts --fix",
     "prepare": "husky install"
   },
-  "dependencies": {},
+  "dependencies": {
+    "json5": "2.2.3"
+  },
   "devDependencies": {
     "@testing-library/dom": "^8.13.0",
     "@testing-library/jest-dom": "^5.16.4",
@@ -44,6 +47,7 @@
     "ts-loader": "^9.3.0",
     "typescript": "^4.7.2",
     "webpack": "5.76.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "yarn-audit-fix": "^9.3.10"
   }
 }
