--- a/package.json
+++ b/package.json
@@ -27,9 +27,7 @@
     "lint": "eslint ./src --ext .ts --fix",
     "prepare": "husky install"
   },
-  "dependencies": {
-    "json5": "2.2.3"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@testing-library/dom": "^8.13.0",
     "@testing-library/jest-dom": "^5.16.4",
@@ -52,7 +50,7 @@
     "ts-jest": "^28.0.3",
     "ts-loader": "^9.3.0",
     "typescript": "^4.7.4",
-    "webpack": "5.76.0",
+    "webpack": "5.94.0",
     "webpack-cli": "^4.9.2",
     "yarn-audit-fix": "^9.3.10"
   }
