--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
   ],
   "parser": "@typescript-eslint/parser",
   "rules": {
+    "no-useless-escape": "off", // rule with bugs in case \( and \)
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": [
       "error"
